# win_notify_rust

./: .gitignore  Cargo.toml  README.md  api_requests.http  build.rs  resources.rc
src/: main.rs
