[package]
name = "win_notify"
version = "0.1.0"
edition = "2021"
# The general section with crate name, license, etc.
build = "build.rs"
include = ["icons/appicon.png"]

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tray-item = "0.10.0"
win-toast-notify = "0.1.6"

[build-dependencies]
embed-resource = "3.0.1"
copy_to_output = "2.1.0"
glob = "0.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
